# platform.upstream.weston

./: Makefile.am  configure.ac  project.config
clients/: Makefile.am  calibrator.c  desktop-shell.c  egl-lock-surface.c  embed-hole.c  embed-plug.c  flower.c  fullscreen.c  multi-resource.c  qa-listsurfaces.c  simple-egl.c  smoke.c  splash-client.c  terminal.c  transformed.c  weston-launcher  window.c  window.h
data/: Makefile.am
desktop-shell/: input-panel.c  shell.c  shell.h
fullscreen-shell/: fullscreen-shell.c
packaging/: 0001-add-optional-condition-for-rpi-and-fbdev.patch  99-chelong-quirk.rules  99-vtc1000-quirk.rules  allow-to-start-weston-with-system-user.patch  browser.xml  qa-fps_binding.patch  qa-protocol_and_client.patch  qa-surfaces_list_binding.patch  shell-1.4.0-Hack-to-allow-selecting-a-default-output.patch  shell-make-panel-optional-panel-false-in-weston.ini.patch  terminal.xml  weston-rdp.spec  weston.changes  weston.ini  weston.manifest  weston.service  weston.sh  weston.spec
protocol/: Makefile.am  desktop-shell.xml  embed.xml  qa.xml  splash.xml  xdg-shell.xml
shared/: cairo-util.c  config-parser.c  option-parser.c  os-compatibility.c  str-util.c
src/: Makefile.am  compositor-drm.c  compositor-rdp.c  compositor-wayland.c  compositor-x11.c  compositor.c  compositor.h  embed.c  embed.h  evdev.c  evdev.h  gl-renderer.c  gl-renderer.h  input.c  launcher-util.c  launcher-util.h  shell.c  (+5 more)
src/mobile-shell/: Makefile.am  mobile-shell-client.pc.in  mobile-shell.c  tizen.h  vconf.c  weston.ini
src/mobile-shell/protocol/: mobile-shell.xml
(+2 files in other folders)
